fix menu button z-index

--- a/public/css/global.css
+++ b/public/css/global.css
@@ -43,6 +43,7 @@ body {
   left: 1px;
   margin:  2rem;
   cursor: pointer;
+  z-index: 999999999999999999999999999;
 }
 
 ul {
